# data-api

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
app/models/: __init__.py  record.py
app/schemas/: __init__.py  record_schema.py
